k3s-manifests/04-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: web-vrdnkcar
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  clusterIP: None
