k3s-manifests/06-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-vrdnkcar-app
  namespace: web-vrdnkcar
spec:
  selector:
    app: web-vrdnkcar-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
